wow what a cutie

--- a/git-collab-doc.qmd
+++ b/git-collab-doc.qmd
@@ -15,3 +15,5 @@ I'll make some more super cool changes
 Also a picture of action Thistle
 
 ![](images/Thistle.jpg)
+
+SO CUTE! such a little nugget
