--- a/git-collab-doc.qmd
+++ b/git-collab-doc.qmd
@@ -23,3 +23,13 @@ She is a little nugget! \<3
 I'll make some more greaaaat
 
 Changes are soooooo cool!
+
+```{r}
+library(palmerpenguins)
+library(tidyverse)
+```
+
+```{r}
+glimpse(penguins)
+```
+
